--- a/views/expensesView.ejs
+++ b/views/expensesView.ejs
@@ -24,7 +24,7 @@
           <input type="text" name="tag" id="inputtag">
         <span>Amount</span>
           <input type="number" name="amount" id="inputamount">
-        <button type="Save" name="save" value="submit" id="savebtn">Save</button>
+        <button type="Save" name="save" id="savebtn">Save</button>
         <script src="/js/data.js" type="text/javascript"></script>
       </ul>
     </section>
@@ -38,7 +38,7 @@
           <th scope="col">Time</th>
           <th scope="col">Tag</th>
           <th scope="col">Amount</th>
-          <th scope="col"><button type="Delete" name="delete" id="deletebtn">Delete</button></th>
+          <th scope="col"><button type='submit' name="delete" id="deletebtn">Delete</button></th>
        </tr>
      </thead>
      <tbody class="table_body">
@@ -49,7 +49,7 @@
          <td><p><%= expList.tag %></p></td>
          <td><p><%= expList.amount %></p></td>
          <td>
-           <label><input name="delete" type="checkbox" unchecked></label>
+           <input id="deleteCheckbox" type="checkbox" value="<%= expList._id %>" onclick="selected()" unchecked>
          </td>
       </tr>
       <% }) %>
