--- a/views/expensesView.ejs
+++ b/views/expensesView.ejs
@@ -25,7 +25,6 @@
         <span>Amount</span>
           <input type="number" name="amount" id="inputamount">
         <button type="Save" name="save" id="savebtn">Save</button>
-        <script src="/js/data.js" type="text/javascript"></script>
       </ul>
     </section>
 
@@ -38,7 +37,11 @@
           <th scope="col">Time</th>
           <th scope="col">Tag</th>
           <th scope="col">Amount</th>
-          <th scope="col"><button type='submit' name="delete" id="deletebtn">Delete</button></th>
+          <th scope="col">
+            <button type='delete' name="delete" id="deletebtn">Delete</button>
+            <button type='edit' name="edit" id="editbtn">Edit</button>
+            <script src="/js/data.js" type="text/javascript"></script>
+          </th>
        </tr>
      </thead>
      <tbody class="table_body">
@@ -49,7 +52,7 @@
          <td><p><%= expList.tag %></p></td>
          <td><p><%= expList.amount %></p></td>
          <td>
-           <input id="deleteCheckbox" type="checkbox" value="<%= expList._id %>" onclick="selected()" unchecked>
+           <input id="checkbox" type="checkbox" value="<%= expList._id %>" onclick="selected()" unchecked>
          </td>
       </tr>
       <% }) %>
