--- a/views/expensesView.ejs
+++ b/views/expensesView.ejs
@@ -40,7 +40,7 @@
           <th scope="col">
             <button type='delete' name="delete" id="deletebtn">Delete</button>
             <button type='edit' name="edit" id="editbtn">Edit</button>
-            <script src="/js/data.js" type="text/javascript"></script>
+            <script src="/js/app.js" type="text/javascript"></script>
           </th>
        </tr>
      </thead>
