--- a/views/incomesView.ejs
+++ b/views/incomesView.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Incomes</title>
   </head>
   <body>
@@ -14,22 +15,49 @@
     </header>
 
     <section>
-      <h3>Add New income</h3>
-      <ul>
-        <span class="">Date/Time</span>
-        <input type="date" name="date" value="">
-        <input type="time" name="time" value="">
-        <span class="">Tag</span>
-        <input type="text" name="tag" value="">
-        <span class="">Amount</span>
-        <input type="number" name="amount" value="">
-        <button type="save" name="save" value="submit" onclick="run()">Save</button>
+      <h3>Add New incomes</h3>
+      <ul class="NewInc">
+        <span>Date/Time</span>
+          <input type="date" name="date" id="inputdate_Inc">
+          <input type="time" name="time" id="inputtime_Inc">
+        <span>Tag</span>
+          <input type="text" name="tag" id="inputtag_Inc">
+        <span>Amount</span>
+          <input type="number" name="amount" id="inputamount_Inc">
+        <button type="Save" name="save" id="savebtn_Inc">Save</button>
       </ul>
     </section>
 
     <footer>
       <h3>Incomes List</h3>
-    </footer>
-
+      <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Date</th>
+          <th scope="col">Time</th>
+          <th scope="col">Tag</th>
+          <th scope="col">Amount</th>
+          <th scope="col">
+            <button type='delete' name="delete" id="deletebtn_Inc">Delete</button>
+            <button type='edit' name="edit" id="editbtn_Inc">Edit</button>
+            <script src="/js/app_inc.js" type="text/javascript"></script>
+          </th>
+       </tr>
+     </thead>
+     <tbody class="table_body">
+       <% historyIncList.forEach(incList => { %>
+       <tr>
+         <th><p><%= incList.date %></p></th>
+         <td><p><%= incList.time %></p></td>
+         <td><p><%= incList.tag %></p></td>
+         <td><p><%= incList.amount %></p></td>
+         <td>
+           <input class="checkbox_inc" type="checkbox" value="<%= incList._id %>" onclick="selectedInc()" unchecked>
+         </td>
+      </tr>
+      <% }) %>
+     </tbody>
+     </table>
+   </footer>
   </body>
 </html>
