--- a/views/expensesView.ejs
+++ b/views/expensesView.ejs
@@ -40,7 +40,7 @@
           <th scope="col">
             <button type='delete' name="delete" id="deletebtn">Delete</button>
             <button type='edit' name="edit" id="editbtn">Edit</button>
-            <script src="/js/app.js" type="text/javascript"></script>
+            <script src="/js/app_exp.js" type="text/javascript"></script>
           </th>
        </tr>
      </thead>
@@ -52,7 +52,7 @@
          <td><p><%= expList.tag %></p></td>
          <td><p><%= expList.amount %></p></td>
          <td>
-           <input id="checkbox" type="checkbox" value="<%= expList._id %>" onclick="selected()" unchecked>
+           <input class="checkbox_exp" type="checkbox" value="<%= expList._id %>" onclick="selectedExp()" unchecked>
          </td>
       </tr>
       <% }) %>
