--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css");
 
-.NewExp span{
-  color: #0000FF;
+* {
+  box-sizing: border-box;
+  font-family: Raleway;
+  color: #AA7700;
 }
