--- a/views/signupView.ejs
+++ b/views/signupView.ejs
@@ -19,7 +19,11 @@
         <input type="text" name="signup_id" id="signup_id">
         <span>Password</span>
         <input type="password" name="signup_password" id="signup_password">
-        <button type="submit" name="signup_submit" class="submitbtn">Submit</button>
+        <span>Email Address</span>
+        <input type="text" name="signup_email" id="signup_email">
+        <span></span>
+        <button type="submit" name="signup_submit" id="signupbtn" class="submitbtn">Signup</button>
+        <script src="/public/signup.js" type="text/javascript"></script>
       </ul>
     </section>
     <footer class="outpage_footer">
