--- a/views/signupView.ejs
+++ b/views/signupView.ejs
@@ -19,7 +19,7 @@
         <input type="text" name="signup_id" id="signup_id">
         <span>Password</span>
         <input type="password" name="signup_password" id="signup_password">
-        <span>Email Address</span>
+        <span>Email Address</span> <p> (Accept Google or Yahoo Mail) </p>
         <input type="text" name="signup_email" id="signup_email">
         <span></span>
         <button type="submit" name="signup_submit" id="signupbtn" class="submitbtn">Signup</button>
