--- a/views/loginView.ejs
+++ b/views/loginView.ejs
@@ -10,7 +10,7 @@
       <ul>
         <li class="page_title">Login Page</li>
       </ul>
-      <h1 class="title">My Money List<span class="title_name">Login</span></h1>
+      <h1 class="title_userId">My Money List<span class="title_name">Login</span></h1>
     </header>
     <section>
       <h2 class="sec_title">Login</h2>
