--- a/views/signupView.ejs
+++ b/views/signupView.ejs
@@ -10,7 +10,7 @@
       <ul>
         <li class="page_title">Signup Page</li>
       </ul>
-      <h1 class="title">My Money List<span class="title_name">Signup</span></h1>
+      <h1 class="title_userId">My Money List<span class="title_name">Signup</span></h1>
     </header>
     <section>
       <h2 class="sec_title">Signup</h2>
@@ -19,7 +19,7 @@
         <input type="text" name="signup_id" id="signup_id">
         <span>Password</span>
         <input type="password" name="signup_password" id="signup_password">
-        <span>Email Address</span> <p> (Accept Google or Yahoo Mail) </p>
+        <span>Email Address</span>
         <input type="text" name="signup_email" id="signup_email">
         <span></span>
         <button type="submit" name="signup_submit" id="signupbtn" class="submitbtn">Signup</button>
